tests/macros/confirm/filter_async.stderr
error: option `filter_async` does not exist for kind `confirm`
 --> $DIR/filter_async.rs:2:53
  |
2 |     let q = inquisition::questions![Confirm { async filter: todo!() }];
  |                                                     ^^^^^^
