tests/macros/confirm/filter_async.rs
fn main() {
    let q = inquisition::questions![Confirm { async filter: todo!() }];
}
